# quantum-secure-email-client

./: .gitignore  README.md  requirements.txt
quant-sec-client/: .env  benchmark.py  email.py  help.txt  main.py  requirements.txt  termcolors.py  user_email.py  utils.py
quant-sec-client/crypto/: aes.py  crypto.py
quant-sec-client/crypto/crystal/: aes256_ctr_drbg.py  kyber.py  modules.py  ntt_helper.py  polynomials.py  utils.py
quant-sec-server/: Dockerfile
quant-sec-server/server/: db.sqlite3
quant-sec-server/server/quantserver/: admin.py  apps.py  models.py  serializer.py  urls.py  utils.py  views.py
quant-sec-server/server/quantserver/migrations/: 0001_initial.py  0002_alter_users_salt.py  0003_emails_synced.py
quant-sec-server/server/server/: settings.py  urls.py
quant_sec_client/: Cargo.toml
quant_sec_client/migrations/2023-11-11-071121_useremails/: down.sql  up.sql
quant_sec_client/src/: email.rs  main.rs  schema.rs  utils.rs
quant_sec_server/: Cargo.toml
