[package]
name = "quant_sec_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
rustyline = "12.0.0"
dotenv = "0.15.0"
diesel = { version = "2.1.0", features = ["mysql"] }
clap = { version = "3.1.9", feature = ["derive"] }